Replace Guava ImmutableMap with Java built-in Map.of
- Replace ImmutableMap.of() with Map.of() in test files
- Replace ImmutableMap.copyOf() with Map.copyOf() in test files
- Remove unused Guava imports
- Add java.util.Map import where needed

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>